--- a/index.html
+++ b/index.html
@@ -1,125 +1,36 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ihara KPIs</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css"/>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #0f172a;
-      color: #f1f5f9;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
-    }
+import { motion } from "framer-motion";
 
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-      animation: fadeIn 1s ease-in-out;
-    }
+export default function Home() {
+  return (
+    <main className="flex min-h-screen flex-col items-center justify-center p-8 bg-gray-100">
+      <motion.div
+        initial={{ opacity: 0, y: -20 }}
+        animate={{ opacity: 1, y: 0 }}
+        transition={{ duration: 0.6 }}
+        className="text-center"
+      >
+        <h1 className="text-5xl font-bold text-gray-800 mb-4">
+          Panel de KPIs - Ihara
+        </h1>
+        <p className="text-lg text-gray-600 max-w-xl">
+          Bienvenido al dashboard inteligente de ventas. Aquí puedes monitorear tus metas, rendimiento y proyecciones. Esta herramienta está conectada con tu base de datos en Google Sheets.
+        </p>
+      </motion.div>
 
-    pre {
-      width: 90%;
-      max-width: 900px;
-      background: #1e293b;
-      padding: 1.5rem;
-      border-radius: 12px;
-      overflow-x: auto;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
-      animation: slideUp 0.8s ease-out;
-    }
-
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(-10px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-
-    @keyframes slideUp {
-      from {opacity: 0; transform: translateY(20px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-  </style>
-</head>
-<body>
-
-  <h1>Script de KPIs – Ihara</h1>
-
-  <pre><code class="language-javascript">
-// DOGET: expone JSON según parámetro “tipo”
-function doGet(e) {
-  const tipo = (e.parameter.tipo || 'kpi').toLowerCase();
-  let payload;
-
-  switch (tipo) {
-    case 'kpi':
-      payload = getKPIData();
-      break;
-    case 'faltantes':
-      payload = getFaltantesData();
-      break;
-    default:
-      return ContentService
-        .createTextOutput(JSON.stringify({ error: 'tipo inválido' }))
-        .setMimeType(ContentService.MimeType.JSON);
-  }
-
-  return ContentService
-    .createTextOutput(JSON.stringify({ tipo, datos: payload }))
-    .setMimeType(ContentService.MimeType.JSON);
+      <motion.div
+        initial={{ opacity: 0, scale: 0.95 }}
+        animate={{ opacity: 1, scale: 1 }}
+        transition={{ delay: 0.3, duration: 0.6 }}
+        className="mt-10 w-full max-w-4xl bg-white rounded-2xl shadow-xl p-6"
+      >
+        <h2 className="text-2xl font-semibold text-gray-700 mb-4">Resumen de KPIs</h2>
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQRL2EV6fF1GfWfYP3v-7E8iDfBJf_jgikMFakJtHRdKYf2tKRT1uT0q1qL4jwS8RoZ8Kt9XYRUrbl2/pubhtml?gid=0&single=true&widget=true&headers=false"
+          width="100%"
+          height="500"
+          className="rounded-xl border border-gray-200"
+        ></iframe>
+      </motion.div>
+    </main>
+  );
 }
-
-// Lee KPIs actuales desde "ventas generales"
-function getKPIData() {
-  const hoja = SpreadsheetApp.getActiveSpreadsheet().getSheetByName('ventas generales');
-  const kpis = hoja.getRange('Q2:W9').getValues();
-  const lista = [];
-
-  for (let i = 0; i < kpis.length; i++) {
-    const fila = kpis[i];
-    lista.push({
-      kpi: fila[0],
-      valor100: fila[1],
-      valor125: fila[2],
-      valor70: fila[3],
-      resultado: fila[4],
-      arrastre: fila[5],
-      total: fila[6]
-    });
-  }
-
-  return lista;
-}
-
-// Lee cuánto falta para metas
-function getFaltantesData() {
-  const hoja = SpreadsheetApp.getActiveSpreadsheet().getSheetByName('ventas generales');
-  const faltantes = hoja.getRange('Q15:T21').getValues();
-  const lista = [];
-
-  for (let i = 0; i < faltantes.length; i++) {
-    const fila = faltantes[i];
-    const kpi = fila[0];
-    if (!kpi) continue;
-
-    lista.push({
-      kpi,
-      faltante100: fila[1],
-      faltante150: fila[2],
-      faltante250: fila[3]
-    });
-  }
-
-  return lista;
-}
-  </code></pre>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-javascript.min.js"></script>
-
-</body>
-</html>
