--- a/index.html
+++ b/index.html
@@ -1,36 +1,67 @@
-import { motion } from "framer-motion";
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Dashboard KPIs - Manu</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      padding: 20px;
+    }
+    .kpi-card {
+      background: white;
+      border-radius: 10px;
+      padding: 15px;
+      margin-bottom: 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .progress-bar {
+      background: #ddd;
+      border-radius: 10px;
+      overflow: hidden;
+      height: 20px;
+      margin-top: 5px;
+    }
+    .progress {
+      background: #4caf50;
+      height: 100%;
+      text-align: right;
+      padding-right: 5px;
+      color: white;
+      font-size: 12px;
+    }
+  </style>
+</head>
+<body>
+  <h1>📊 Dashboard KPIs</h1>
+  <div id="kpis"></div>
 
-export default function Home() {
-  return (
-    <main className="flex min-h-screen flex-col items-center justify-center p-8 bg-gray-100">
-      <motion.div
-        initial={{ opacity: 0, y: -20 }}
-        animate={{ opacity: 1, y: 0 }}
-        transition={{ duration: 0.6 }}
-        className="text-center"
-      >
-        <h1 className="text-5xl font-bold text-gray-800 mb-4">
-          Panel de KPIs - Ihara
-        </h1>
-        <p className="text-lg text-gray-600 max-w-xl">
-          Bienvenido al dashboard inteligente de ventas. Aquí puedes monitorear tus metas, rendimiento y proyecciones. Esta herramienta está conectada con tu base de datos en Google Sheets.
-        </p>
-      </motion.div>
+  <script>
+    const API_URL = 'https://script.google.com/macros/s/AKfycby9UyKr-UcWOCvrMGCsgvc38_-HmKZpXjlj9THbGLNK0lhLJ7B-_RSVpxFpP76eWjeP/exec?tipo=kpi';
 
-      <motion.div
-        initial={{ opacity: 0, scale: 0.95 }}
-        animate={{ opacity: 1, scale: 1 }}
-        transition={{ delay: 0.3, duration: 0.6 }}
-        className="mt-10 w-full max-w-4xl bg-white rounded-2xl shadow-xl p-6"
-      >
-        <h2 className="text-2xl font-semibold text-gray-700 mb-4">Resumen de KPIs</h2>
-        <iframe
-          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQRL2EV6fF1GfWfYP3v-7E8iDfBJf_jgikMFakJtHRdKYf2tKRT1uT0q1qL4jwS8RoZ8Kt9XYRUrbl2/pubhtml?gid=0&single=true&widget=true&headers=false"
-          width="100%"
-          height="500"
-          className="rounded-xl border border-gray-200"
-        ></iframe>
-      </motion.div>
-    </main>
-  );
-}
+    async function cargarKPIs() {
+      const res = await fetch(API_URL);
+      const data = await res.json();
+
+      const contenedor = document.getElementById("kpis");
+      data.datos.forEach(item => {
+        const porcentaje = Math.min(100, Math.round((item.resultado / item.valor100) * 100));
+
+        const kpiDiv = document.createElement("div");
+        kpiDiv.className = "kpi-card";
+        kpiDiv.innerHTML = `
+          <h3>${item.kpi}</h3>
+          <p><strong>Resultado:</strong> ${item.resultado} / ${item.valor100}</p>
+          <div class="progress-bar">
+            <div class="progress" style="width:${porcentaje}%">${porcentaje}%</div>
+          </div>
+        `;
+        contenedor.appendChild(kpiDiv);
+      });
+    }
+
+    cargarKPIs();
+  </script>
+</body>
+</html>
